# methods_and_tools_of_image_processing

Statistical_analysis_of_digital_images/: CMakeLists.txt  main.cpp
Statistical_analysis_of_digital_images/YCbCr/: YCbCr.cpp  YCbCr.h
Statistical_analysis_of_digital_images/bmp/: bmp.cpp  bmp.h
Statistical_analysis_of_digital_images/test/: correlation.cpp  correlation.h
Statistical_analysis_of_digital_images_graphs/: graphs.py  ycbcr.py
